<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <!--
        No nested views or layouts, just simple views stacked on
        each other. Here again, LinearLayout it's an obvious choice for
        its simplicity in designing these simple scenarios, in which it
        doesn't have a big impact on performances.
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screens.login.LoginFragment" >

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/email_text"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginOrRegister"
            style="@style/SlimButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/login_text"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="8dp"
            app:strokeColor="@color/colorAccent"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/register_tip_text"
            android:textColor="@android:color/holo_blue_light" />
    </LinearLayout>
</layout>